fixing data view alignment

--- a/client/src/components/CurrentProducts/CurrentProducts.css
+++ b/client/src/components/CurrentProducts/CurrentProducts.css
@@ -5,7 +5,6 @@ table {
 .current-products {
     margin-left: 2.5rem !important;
     margin-right: 2.5rem !important;
-    padding-bottom: 2.5rem !important;
     border: 2px solid #41A4F0 !important;
     height: 100%;
     font-family: 'Montserrat', sans-serif;
