--- a/client/src/components/ViewData/ViewData.css
+++ b/client/src/components/ViewData/ViewData.css
@@ -4,6 +4,6 @@
 }
 
 .view-data-card {
-    height: 800px;
+    height: 450px;
     width: 450px;
 }
